<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/crvena_pozadina">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/troophy"
        android:layout_margin="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tekst_pobednik"
        android:layout_marginTop="10dp"
        android:textSize="27sp"
        android:textColor="@color/white"
        android:text="@string/you_are_a_true_liverpool_fan"
        android:textAlignment="center"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/play_again"
        android:textSize="25sp"
        android:textColor="@color/crna"
        android:id="@+id/platygaianbutton"
        android:layout_margin="15dp"
        android:onClick="PlayAgain"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tekst_link"
        android:text="@string/please_visit"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tekst_link_macreds"
        android:text="@string/macedonian_reds"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="30sp"/>
</LinearLayout>